manifest/objects/L2O_HealthPlan_and_Insurance_Prices__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Admin_Fee__c</fullName>
        <label>Admin Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_At_Risk_Fee__c</fullName>
        <label>At Risk Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_BusinessRegion__c</fullName>
        <label>Business Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Client_Line_of_Business__c</fullName>
        <label>Client Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Client_Line_of_Business</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Consult_Type__c</fullName>
        <label>Consult Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consult_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_ContractPath__c</fullName>
        <label>Contract Path</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Path</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_ContractType__c</fullName>
        <description>To capture the Contract Path Sub Type.</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Path_Sub_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Contracting_Account_ID__c</fullName>
        <formula>L2O_Contracting_Account__r.L2O_GUID__c</formula>
        <label>Contracting Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Contracting_Account_Name__c</fullName>
        <label>Contracting Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Contracting_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracting Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HealthPlan and Insurance Prices</relationshipLabel>
        <relationshipName>HealthPlan_and_Insurance_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fee_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_GrandParent_Product_Code__c</fullName>
        <formula>IF(ISBLANK(L2O_GrandParent_Product__r.ProductCode),&apos;NULL&apos; , L2O_GrandParent_Product__r.ProductCode)</formula>
        <label>GrandParent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_GrandParent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrandParent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>HealthPlan and Insurance Prices (GrandParent Product)</relationshipLabel>
        <relationshipName>HealthPlan_and_Insurance_Prices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Initial_Utilization_Cap__c</fullName>
        <label>Initial Utilization Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2O_Insurance_Policy__c</fullName>
        <label>Insurance Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Extended Health Coverage (EHC)</fullName>
                </value>
                <value>
                    <fullName>Critical Care</fullName>
                </value>
                <value>
                    <fullName>Mercer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Insurance_Type__c</fullName>
        <label>Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Package_Product_Code__c</fullName>
        <label>Package Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Product_Code__c</fullName>
        <formula>IF(ISBLANK(L2O_Parent_Product__r.ProductCode),&apos;NULL&apos; , L2O_Parent_Product__r.ProductCode)</formula>
        <label>Parent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>HealthPlan and Insurance Prices (Parent Product)</relationshipLabel>
        <relationshipName>HealthPlan_and_Insurance_Prices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Pricing_Model__c</fullName>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Pricing_Model</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_ProductCode__c</fullName>
        <formula>L2O_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>HealthPlan and Insurance Prices</relationshipLabel>
        <relationshipName>HealthPlan_and_Insurance_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Special_Price_Type__c</fullName>
        <label>Special Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contracted Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Total_Book_of_Business_End__c</fullName>
        <label>Total Book of Business End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Total_Book_of_Business_Start__c</fullName>
        <label>Total Book of Business Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Up_Front_Fee__c</fullName>
        <label>Up Front Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Utilization_Assumption__c</fullName>
        <label>Utilization Assumption</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>HealthPlan and Insurance Prices</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>L2O_ContractPath__c</columns>
        <columns>L2O_Product__c</columns>
        <columns>L2O_Pricing_Model__c</columns>
        <columns>L2O_Client_Line_of_Business__c</columns>
        <columns>L2O_Contracting_Account_ID__c</columns>
        <columns>L2O_Contracting_Account_Name__c</columns>
        <columns>L2O_Parent_Product_Code__c</columns>
        <columns>L2O_GrandParent_Product_Code__c</columns>
        <columns>L2O_Total_Book_of_Business_Start__c</columns>
        <columns>L2O_Total_Book_of_Business_End__c</columns>
        <columns>L2O_Price__c</columns>
        <columns>L2O_EffectiveDate__c</columns>
        <columns>L2O_ExpirationDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L2O_Contracting_Account_Name__c</field>
            <operation>contains</operation>
            <value>Aetna</value>
        </filters>
        <filters>
            <field>L2O_ExpirationDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HPIPRI-{000000}</displayFormat>
        <label>HealthPlan and Insurance Prices Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HealthPlan and Insurance Prices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>